--- a/contato.html
+++ b/contato.html
@@ -62,6 +62,7 @@
         <br>
         <h2>Formulário de contato: </h2>
         <br>
+        <form>
         <p>Nome Completo:</p>
         <input type="text" placeholder="" style="width: 30%; height: 35px; font-size: 14px;">
         <br>
@@ -76,6 +77,7 @@
         <br>
         <p>Mensagem:</p>
         <textarea rows="10" cols="60"></textarea>
+        </form>
         <br>
         <br>
         <br>
@@ -103,4 +105,5 @@
         </footer>
     </center>
 </body>
+
 </html>
