--- a/contato.html
+++ b/contato.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Universidade Do Código</title>
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
             background-color: #f9f9f9;
@@ -40,7 +40,7 @@
 </head>
 <body>
     <center>
-        <img src="assets/image.png" alt="" width="100">
+        <img src="image.png" alt="" width="100">
     <br>
     <br>
         <a href="index.html">Home </a>
@@ -107,3 +107,4 @@
 </body>
 
 </html>
+
