--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Universidade Do Código</title>
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
             background-color: #f9f9f9;
@@ -41,7 +41,7 @@
 </head>
 <body>
         <center>
-        <img src="assets/image.png" alt="" width="100">
+        <img src="image.png" alt="" width="100">
         <br>
         <br>
         <a href="index.html">Home </a>
@@ -53,7 +53,7 @@
     <hr>
     <br>
     <center>
-        <img src="assets/banner.png" alt="" width=auto">
+        <img src="banner.png" alt="" width=auto">
     </center>
         <center><h1>Sobre a Universidade</h1>
             <p>A Universidade do Código é uma instituição de ensino superior especializada em formar profissionais para o mercado de tecnologia. Com uma equipe de professores experientes e uma metodologia de ensino inovadora, a Universidade do Código tem como objetivo preparar seus alunos para atuar em diversas áreas da tecnologia, desde a programação até a gestão de projetos.</p>
@@ -70,4 +70,5 @@
     </center>
 
 </body>
+
 </html>
